# MACVM

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  justfile  reseed-world.sh  run-cocoa.sh  run-gui.sh  run-mandelvm.sh
.claude/: launch.json
QBEJIT/: LICENSE-FBCQBE  README.md  REVIEW.md
QBEJIT/aot/: README.md
QBEJIT/design/: QBE_extensions.md  direct_qbe_ir_jit.md  jit_design.md  jit_status_tracker.md  macjitbuffer.md
QBEJIT/jit/: known_issue_regression_test.bas
QBEJIT/jit/rust/: Cargo.toml  FEATURES.md  README.md  build.rs
QBEJIT/jit/rust/csrc/: rust_bridge.c
QBEJIT/jit/rust/src/: compile.rs  encode.rs  encoder.rs  ffi.rs  ir.rs  ir_ffi.rs  lib.rs  linker.rs  memory.rs  module.rs  patch.rs
QBEJIT/jit/rust/tests/: integration.rs  ir_builder.rs  patching.rs  register_bug_investigation.rs
abc_player/: Cargo.toml
abc_player/src/: lib.rs
cocoa_gui/: Cargo.toml
cocoa_gui/src/: boot.rs  canvas.rs  colorize.rs  complete.rs  control.rs  debugger.rs  filein.rs  format.rs  game.rs  host_service.rs  main.rs  objc.rs  panels.rs  primary_restart.rs  rebuild.rs  snapshot.rs  supervisor.rs  symbols.rs  view_refresh.rs
docs/: 31bytecodes.md  APPS.md  ASM.md  CANVAS.md  DEBUGGER.md  DESIGN.md  FFI.md  FFI_utility.md  HLOV.md  IMAGE.md  ISA.md  PERF.md  PORTING_JOURNAL.md  ROADMAP.md  RUSTTCL.md  SIMD.md  SPEC.md  SPRINTS.md  VMregisters.md  WORLD.md  accelerate_design.md  arm64.md  asyncio_design.md  b4_nlr_splice_design.md  b5_multibb_splice_design.md  become_design.md  closure_compilation_design.md  closure_compilation_review.md  cocoa_bridge_design.md  cocoa_gui_design.md  cocoa_gui_flag_and_drain.md  cocoa_gui_implementation.md  cog_bench.md  cog_send_portability.md  compiled_send_auditor_design.md  deopt_fixes.md  dual_arm_design.md  editor_design.md  escape_analysis_design.md  float_fastpath_design.md  (+21 more)
docs/sprints/: CONVENTIONS.md  README.md  sprint_s00_detail.md  sprint_s01_detail.md  sprint_s02_detail.md  sprint_s03_detail.md  sprint_s04_detail.md  sprint_s05_detail.md  sprint_s06_detail.md  sprint_s07_detail.md  sprint_s08_detail.md  sprint_s09_detail.md  sprint_s10_detail.md  sprint_s11_detail.md  sprint_s12_detail.md  sprint_s13_detail.md  sprint_s14_detail.md  sprint_s15_detail.md  tests_s00.md  tests_s01.md  tests_s02.md  tests_s03.md  tests_s04.md  tests_s05.md  tests_s06.md  tests_s07.md  tests_s08.md  tests_s09.md  tests_s10.md  tests_s11.md  tests_s12.md  tests_s13.md  tests_s14.md  tests_s15.md
examples/: mandel_demo.rs
ffi_gen/: Cargo.toml
ffi_gen/src/: lib.rs
gui/: Cargo.toml  PLAN.md  README.md  smappl.md
gui/assets/: alto-mono.css  byte81.css  canvas-swatch.html  crt-amber.css  crt-green.css  dark.css  editor-swatch.html  hidef.css  high-contrast.css  pharo.css  preview.html  self.css  smalltalk80.css  smtk.js  solarized-dark.css  solarized-light.css  squeak.css  strongtalk.css  theme-swatch.html
gui/mock_vm/: Cargo.toml
gui/mock_vm/src/: lib.rs
gui/reference/pages/: startPage.html
gui/reference/pages/documentation/: tour
gui/reference/pages/macvm-help/: architecture.html  bytecodes.html  cocoa.html  gui-shell.html  index.html  primitives.html  toolbar.html  workers.html
gui/reference/pages/macvm-help/tour/: conclusion.html  debugging.html  differences.html  environment.html  fastfloats.html  intro.html  optimization.html  simd.html  toc.html  virtualmachine.html
gui/src/: browser_render.rs  canvas_render.rs  editor_render.rs  game_pane.rs  main.rs  objc.rs  preprocess.rs  vm_host.rs  workspace_render.rs  world_boot.rs
gui/tests/: gamepane_m0.rs  it_run_from_image.rs
image_store/: Cargo.toml
image_store/examples/: m1probe.rs
image_store/src/: export.rs  flows.rs  import.rs  lib.rs  mst.rs  world_boot.rs
scripts/: cog-bench.mst  cog-bench.sh  cog-bench.st  mst2st.py  perf.sh
src/: embed.rs  interpreter.rs  lib.rs  lookup.rs  main.rs  memory.rs  oops.rs  runtime.rs  utils.rs
src/bytecode/: builder.rs  disasm.rs  method.rs  mod.rs  opcode.rs
src/codecache/: adapters.rs  deopt_trap.rs  ffi_stubs.rs  flush.rs  guard.rs  mega.rs  mod.rs  nmethod.rs  pics.rs  stubs.rs
src/compiler/: assembler.rs  decode.rs  disasm_a64.rs  driver.rs  emit.rs  escape.rs  feedback.rs  inline.rs  ir.rs  jasm_assembler.rs  mod.rs  oopmap.rs  regalloc.rs  scopes.rs
src/frontend/: ast.rs  capture.rs  classdef.rs  codegen.rs  lexer.rs  mod.rs  parser.rs  world.rs
src/interpreter/: blocks.rs  compiled_call.rs  ic.rs  mod.rs  send.rs  stack.rs  unwind.rs
src/memory/: alloc.rs  cards.rs  fullgc.rs  handles.rs  layout.rs  mod.rs  offsets.rs  print.rs  reservation.rs  roots.rs  scavenge.rs  space.rs  spaces.rs  stall.rs  stats.rs  store.rs  symbols.rs  universe.rs  verify.rs
src/oops/: closure.rs  context.rs  heap.rs  home_ref.rs  klass.rs  layout.rs  mark.rs  method_dict.rs  mod.rs  smi.rs  wrappers.rs
src/runtime/: alien.rs  debug.rs  deopt.rs  deps.rs  error.rs  ffi.rs  frames.rs  globals.rs  lookup.rs  mod.rs  mop.rs  objc_bridge.rs  objc_delegate.rs  (+8 more)
tests/: cocoa_delegate.rs  cocoa_main_hop.rs  it_bench_smoke.rs  it_blocks.rs  it_bytecode.rs  it_cli.rs  it_codecache.rs  it_debugger.rs  it_frontend_errors.rs  it_frontend_golden.rs  it_gc_full.rs  it_gc_jit.rs  it_golden.rs  it_interp.rs  it_memory.rs  it_nlr.rs  it_probe.rs  it_sends.rs  it_tier1.rs  it_typecheck.rs  it_world.rs
tools/: make-macapp.sh
world/: 01_object.mst  02_nil_boolean.mst  03_behavior.mst  04_transcript.mst  04a_blockclosure.mst  05_magnitude.mst  06_smallinteger.mst  07_largeinteger.mst  08_double.mst  09_character.mst  10_array.mst  11_bytearray.mst  12_string.mst  13_symbol.mst  14_association.mst  15_ordered.mst  16_dictionary.mst  17_interval.mst  18_writestream.mst  19_printing.mst  20_system.mst  21_collections_ext.mst  22_set.mst  23_fraction.mst  23a_scaleddecimal.mst  24_readstream.mst  25_sortedcollection.mst  26_bag.mst  27_random.mst  28_point.mst  29_identity_collections.mst  30_date_time.mst  31_readwritestream.mst  32_object_protocol_gaps.mst  33_smappl.mst  34_tools.mst  35_mandelbrot.mst  36_pixmap.mst  37_waves.mst  38_simd.mst  (+48 more)
(+150 files in other folders)
