[workspace]
members = [".", "gui", "gui/mock_vm", "image_store", "ffi_gen"]
# Per gui/PLAN.md §6 (SPEC A18): the repo root is a cargo workspace once GUI
# implementation starts, root package included as a member (not just a
# virtual manifest) so `cargo build`/`test` at the top still builds macvm
# alone by default.
resolver = "2"

[package]
name = "macvm"
version = "0.0.0"
edition = "2021"
description = "A Self/Strongtalk-lineage adaptive research VM for macOS on Apple Silicon (arm64)."
license = "BSD-2-Clause"
publish = false

[[bin]]
name = "macvm"
path = "src/main.rs"

[lib]
name = "macvm"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
# Vendored wfasm (S9, src/vendor/wfasm/) uses anyhow for its own error
# plumbing (Result/Context/bail!) — kept as-is per the vendoring procedure's
# "minimal diff against upstream" rule rather than re-threaded onto MACVM's
# own error types.
anyhow = "1"
# codecache::guard::JitWriteGuard's flush-range list (sprint_s09_detail.md
# D2.4) — almost always 1-2 entries per publish/patch, so the inline
# capacity avoids a heap allocation on the common path.
smallvec = "1"

# Codegen backend is an OPEN DECISION (see docs/DESIGN.md §4). Backends are
# selected by feature so the compiler front end never hard-depends on one.
[features]
default = []
# backend-jasm = []   # reuse the JASM AArch64 encoder
# backend-llvm = []   # emit LLVM IR
# interp-only  = []   # baseline interpreter, no native codegen

[profile.release]
opt-level = 3
lto = "thin"
