[workspace]
members = [".", "gui", "gui/mock_vm", "image_store", "ffi_gen", "abc_player", "cocoa_gui"]
# Per gui/PLAN.md §6 (SPEC A18): the repo root is a cargo workspace once GUI
# implementation starts, root package included as a member (not just a
# virtual manifest) so `cargo build`/`test` at the top still builds macvm
# alone by default.
#
# `cocoa_gui` (docs/cocoa_gui_design.md §12, sprint CG2) is the native AppKit
# GUI bin (`macvm-cocoa`), a NON-default member: `default-members` lists only
# the root package, so a bare `cargo build`/`cargo test` at the top builds/tests
# macvm alone and never links the AppKit glue. Build it explicitly with
# `cargo build -p cocoa_gui`.
default-members = ["."]
resolver = "2"

[package]
name = "macvm"
version = "0.0.0"
edition = "2021"
description = "A Self/Strongtalk-lineage adaptive research VM for macOS on Apple Silicon (arm64)."
license = "BSD-2-Clause"
publish = false
# A second [[bin]] (asm_preview, S23) makes a bare `cargo run` ambiguous —
# every Justfile recipe and doc that says `cargo run -- run …` means the VM.
default-run = "macvm"

[[bin]]
name = "macvm"
path = "src/main.rs"

# S23 (docs/ASM.md) preview tool: extracts a `<asm: '...'>` method body and
# runs it through the vendored JASM assembler (src/vendor/wfasm), standing
# alone from the real compiler pipeline — see docs/ASM.md §7.
[[bin]]
name = "asm_preview"
path = "src/bin/asm_preview.rs"

[lib]
name = "macvm"
path = "src/lib.rs"

[build-dependencies]
# Compiles the one Objective-C file the Cocoa bridge needs (the @try/@catch
# exception shim, src/runtime/objc_shim.m) — "the one new build dependency
# this design admits" (docs/cocoa_bridge_design.md §5).
cc = "1"

[dependencies]
libc = "0.2"
# Vendored wfasm (S9, src/vendor/wfasm/) uses anyhow for its own error
# plumbing (Result/Context/bail!) — kept as-is per the vendoring procedure's
# "minimal diff against upstream" rule rather than re-threaded onto MACVM's
# own error types.
anyhow = "1"
# codecache::guard::JitWriteGuard's flush-range list (sprint_s09_detail.md
# D2.4) — almost always 1-2 entries per publish/patch, so the inline
# capacity avoids a heap allocation on the common path.
smallvec = "1"

# Codegen backend is an OPEN DECISION (see docs/DESIGN.md §4). Backends are
# selected by feature so the compiler front end never hard-depends on one.
[features]
default = []
# backend-jasm = []   # reuse the JASM AArch64 encoder
# backend-llvm = []   # emit LLVM IR
# interp-only  = []   # baseline interpreter, no native codegen

# Cocoa C3's main-thread-hop gate needs the REAL main thread (libtest runs
# #[test]s on workers while main sits in join(), so nothing would drain the
# main dispatch queue). harness = false makes main() the test.
[[test]]
name = "cocoa_main_hop"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
