[package]
name = "image_store"
version = "0.0.0"
edition = "2021"
description = "A versioned SQLite class/method source database (docs/IMAGE.md) — not the S16 heap snapshot; a source container + optional recompile-avoidance bytecode cache, for the GUI class browser's interactive edits to persist into."
license = "BSD-2-Clause"
publish = false

[lib]
name = "image_store"
path = "src/lib.rs"

[[bin]]
name = "import_world"
path = "src/bin/import_world.rs"

[dependencies]
# bundled: compiles SQLite from source, so this doesn't depend on whatever
# libsqlite3 (if any) happens to be on a given machine — consistent with
# this project's general "minimize environment-dependent build surface"
# stance, just via a normal crates.io dependency rather than the GUI
# crate's zero-dependency Cocoa bridge (that one avoids objc2 specifically
# for its evolving macro API, not external crates on principle).
rusqlite = { version = "0.31", features = ["bundled"] }
# world_boot.rs (moved from gui/, docs/package_aware_editing_design.md M2):
# replaying a stored image into a VmHandle needs the VM type it replays
# into. The constraint only ever ran the other direction — macvm itself
# must stay free of a SQLite dependency (world_boot.rs's own header
# comment) — so image_store depending on macvm is sound; gui and
# cocoa_gui both already depend on macvm directly too.
macvm = { path = ".." }
